2009-10-10  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #12186: EM sends Location-header without exit (thanks to Steffen Gebert)
	* Added ext_icon for sysext version (thanks to Steffen Gebert)
	* Whitespace cleaning of typo3 sysext files
	* Whitespace cleaning of typo3 files
	* Whitespace cleaning of t3lib files

2009-10-11  Rupert Germann  <rupi@gmx.li>

	* Follow-up to bug #12154: renamed t3lib_MessageQueue to t3lib_FlashMessageQueue, changed some some function names
	  in t3lib_flashmessages and t3lib_FlashMessageQueue.
	* Follow-up to bug #9355: Fixed some broken utf-8 chars in class t3lib_error_debugexceptionhandler
	* Fixed bug #12164: Use flashmessages to display messages in fileadmin

2009-10-10  Rupert Germann  <rupi@gmx.li>

	* Fixed bug #12129 (follow-up to bug #11986): Translation update broken with activated output compression (thanks to Steffen Gebert)

2009-10-09  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #12111: Improve output of extension details (thanks to Steffen Gebert)
	* Fixed bug #12110: Show status of flag doNotLoadInFE in extension details (thanks to Steffen Gebert)
	* Fixed bug #12119: PHP warning shown in EM, if webserver can't remove extension dir (thanks to Steffen Gebert)

2009-10-09  Oliver Hader  <oliver@typo3.org>

	* Follow-up to issue #12162: Reverted modification of existing locallang labels and introduced new labels instead

2009-10-09  Rupert Germann  <rupi@gmx.li>

	* Fixed bug #12154: Improve API of flashmessages

2009-10-09  Francois Suter  <francois@typo3.org>

	* Fixed bug #12078: Scheduler: Check if additional fields indeed provide fields
	* Fixed bug #12117: Added use of flash messages to the Extension Manager (thanks to Steffen Gebert)
	* Fixed bug #12166: Scheduler: Gathered TODOs from Forge bug tracker into the Scheduler's manual

2009-10-09  Kasper Skaarhoj  <kasper@typo3.org>
	* Tiny bug with date function in t3lib_befunc. Casted timestamp to integer.